--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
     "\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\", \"\")\n",
-    "openai.api_key = OPENAI_API_KEY"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "SANDBOX_DIR = \"/Users/aidand/dev/babyagi/sandbox\"\n",
     "def create_file(path, content):\n",
     "    with open(os.path.join(SANDBOX_DIR, path), \"w\") as f:\n",
@@ -102,29 +106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'OpenAI' from 'openai' (/Users/aidand/dev/babyagi/env/lib/python3.10/site-packages/openai/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAI\n\u001b[1;32m      3\u001b[0m PROGRAM_OBJECTIVE\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownload a PDF from the internet and convert it to a text file.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m task_list \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'OpenAI' from 'openai' (/Users/aidand/dev/babyagi/env/lib/python3.10/site-packages/openai/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coder Agent - Plan\n",
+      "Create a README.md file describing the codebase and how to run it.\n",
+      "Create a requirements.txt file listing the dependencies for the codebase.\n",
+      "Create the main Python script file for the codebase.\n",
+      "Implement the core functionality of the codebase in the main script file.\n",
+      "Update the README.md file with usage instructions for the main script.\n",
+      "Test the codebase to ensure everything works as expected.\n"
      ]
     }
    ],
    "source": [
     "from openai import OpenAI\n",
+    "from pydantic import BaseModel\n",
+    "import json\n",
     "\n",
     "PROGRAM_OBJECTIVE=\"download a PDF from the internet and convert it to a text file.\"\n",
     "\n",
+    "CODER_AGENT_SYSTEM_PROMPT=\"\"\"\n",
+    "You are a software engineer who is writing code to build a small python codebase that will {PROGRAM_OBJECTIVE}.\n",
+    "\"\"\"\n",
+    "\n",
     "task_list = []\n",
     "\n",
-    "from pydantic import BaseModel\n",
     "from typing import List\n",
     "\n",
     "class Plan(BaseModel):\n",
@@ -132,28 +143,45 @@
     "\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)\n",
     "\n",
-    "\n",
     "# Coding agent creates a step by step plan\n",
-    "response = client.chat.completions.parse(\n",
+    "response = client.chat.completions.create(\n",
     "    model=\"gpt-4o-mini\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"\"\"\n",
-    "         You are a software engineer who is writing code. You are to follow the instructions and write the code. \\\n",
-    "         You have 3 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path). \\\n",
-    "         Use these operations to build a small python codebase that will {PROGRAM_OBJECTIVE}.\n",
+    "        {\"role\": \"system\", \"content\": CODER_AGENT_SYSTEM_PROMPT},\n",
+    "        {\"role\": \"user\", \"content\": \"\"\"\n",
+    "         Create a step by step plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\n",
+    "         You have 3 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path).\n",
+    "         Limit your steps to only using these operations.\n",
     "         Please include a README.md file in the root of the codebase that describes the codebase and how to run it.\n",
     "         Please include a requirements.txt file in the root of the codebase that describes the dependencies of the codebase.\n",
     "         \"\"\"},\n",
-    "        {\"role\": \"user\", \"content\": \"\"\"\n",
-    "         Create a step by step plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\n",
-    "         \"\"\"},\n",
     "    ],\n",
     "    tools=TOOLS,\n",
-    "    response_format=Plan,\n",
+    "    response_format={\n",
+    "        \"type\": \"json_schema\",\n",
+    "        \"json_schema\": {\n",
+    "            \"name\": \"Plan\",\n",
+    "            \"description\": \"A plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\",\n",
+    "            \"strict\": True,\n",
+    "            \"schema\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"steps\": {\"type\": \"array\", \"items\": {\"type\": \"string\"}},\n",
+    "                },\n",
+    "                \"required\": [\"steps\"],\n",
+    "                \"additionalProperties\": False,\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
     ")\n",
-    "print(response)\n",
+    "plan = json.loads(response.choices[0].message.content)\n",
+    "print(\"Coder Agent - Plan\")\n",
+    "for step in plan[\"steps\"]:\n",
+    "    print(step)\n",
     "\n",
     "# Coding agent prioritizes the plan\n",
+    "\n",
+    "\n",
     "# Coding agent executes the plan\n",
     "\n",
     "# Review agent reviews the code\n",
