--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -18,12 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "SANDBOX_DIR = \"/Users/aidand/dev/babyagi/sandbox\"\n",
+    "if not os.path.exists(SANDBOX_DIR):\n",
+    "    os.makedirs(SANDBOX_DIR)\n",
+    "\n",
     "def create_file(path, content):\n",
     "    with open(os.path.join(SANDBOX_DIR, path), \"w\") as f:\n",
     "        f.write(content)\n",
@@ -40,6 +43,9 @@
     "    os.remove(os.path.join(SANDBOX_DIR, path))\n",
     "    print(f\"Deleted file {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
+    "def make_dir(path):\n",
+    "    os.makedirs(os.path.join(SANDBOX_DIR, path))\n",
+    "    print(f\"Created directory {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
     "TOOLS = [\n",
     "    {\n",
@@ -101,12 +107,29 @@
     "            \"required\": [\"path\"],\n",
     "        },\n",
     "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"make_dir\",\n",
+    "            \"description\": \"Create a directory with the given name\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"path\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The relative path to the directory to create\",\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"path\"],\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +137,10 @@
      "output_type": "stream",
      "text": [
       "Coder Agent - Plan\n",
-      "Create a README.md file describing the codebase and how to run it.\n",
-      "Create a requirements.txt file listing the dependencies for the codebase.\n",
-      "Create the main Python script file for the codebase.\n",
-      "Implement the core functionality of the codebase in the main script file.\n",
-      "Update the README.md file with usage instructions for the main script.\n",
-      "Test the codebase to ensure everything works as expected.\n"
+      "Create a directory structure for the codebase, including files for the README.md and requirements.txt.\n",
+      "Create the README.md file with a brief description of the codebase and instructions on how to run it.\n",
+      "Create the requirements.txt file listing the necessary dependencies for the codebase.\n",
+      "----------------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -178,6 +199,7 @@
     "print(\"Coder Agent - Plan\")\n",
     "for step in plan[\"steps\"]:\n",
     "    print(step)\n",
+    "print(\"-\" * 100)\n",
     "\n",
     "# Coding agent prioritizes the plan\n",
     "\n",
