--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +137,25 @@
      "output_type": "stream",
      "text": [
       "Coder Agent - Plan\n",
-      "Create a directory structure for the codebase, including files for the README.md and requirements.txt.\n",
-      "Create the README.md file with a brief description of the codebase and instructions on how to run it.\n",
-      "Create the requirements.txt file listing the necessary dependencies for the codebase.\n",
-      "----------------------------------------------------------------------------------------------------\n"
+      "Create a directory for the project named 'my_project'.\n",
+      "Create a README.md file in the 'my_project' directory with content describing the project and how to run it.\n",
+      "Create a requirements.txt file in the 'my_project' directory with the necessary dependencies for the project.\n",
+      "Create a main.py file in the 'my_project' directory with initial code structure or placeholders for functionality.\n",
+      "Update the README.md file to include instructions on how to install dependencies from requirements.txt.\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Coder Agent - Executing Plan\n",
+      "Please specify the operation you would like to perform, including details such as the file path and content if applicable. Here are the operations you can choose from:\n",
+      "\n",
+      "1. Create a file\n",
+      "2. Update a file\n",
+      "3. Delete a file\n",
+      "4. Make a directory\n",
+      "\n",
+      "Provide the necessary details for the operation you want to execute.\n",
+      "Please specify what operation you'd like to perform, replacing `{step}` with the desired action (e.g., create a file, update a file, delete a file, or create a directory), including the path and content if applicable.\n",
+      "It seems like you want to perform a specific operation related to file management. However, you haven't mentioned what `{step}` you would like to perform. Could you please specify the operation you want to execute, such as creating a file, updating a file, deleting a file, or creating a directory?\n",
+      "It seems like you want to perform a specific file operation, but it looks like you forgot to specify what `{step}` should be. Could you please provide the operation you'd like to perform? For instance, you can specify \"create a file,\" \"update a file,\" \"delete a file,\" or \"make a directory.\" Additionally, please provide the relevant details such as the path and content if applicable.\n",
+      "Could you please provide the specific step or operation you'd like to perform?\n"
      ]
     }
    ],
@@ -154,8 +169,6 @@
     "CODER_AGENT_SYSTEM_PROMPT=\"\"\"\n",
     "You are a software engineer who is writing code to build a small python codebase that will {PROGRAM_OBJECTIVE}.\n",
     "\"\"\"\n",
-    "\n",
-    "task_list = []\n",
     "\n",
     "from typing import List\n",
     "\n",
@@ -171,8 +184,9 @@
     "        {\"role\": \"system\", \"content\": CODER_AGENT_SYSTEM_PROMPT},\n",
     "        {\"role\": \"user\", \"content\": \"\"\"\n",
     "         Create a step by step plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\n",
-    "         You have 3 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path).\n",
-    "         Limit your steps to only using these operations.\n",
+    "         You have 4 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path), make_dir(path).\n",
+    "         Include the file that you will updating and if relevant the contents of the file.\n",
+    "         Limit your step by step plan to only these operations.\n",
     "         Please include a README.md file in the root of the codebase that describes the codebase and how to run it.\n",
     "         Please include a requirements.txt file in the root of the codebase that describes the dependencies of the codebase.\n",
     "         \"\"\"},\n",
@@ -201,13 +215,23 @@
     "    print(step)\n",
     "print(\"-\" * 100)\n",
     "\n",
-    "# Coding agent prioritizes the plan\n",
-    "\n",
-    "\n",
     "# Coding agent executes the plan\n",
+    "print(\"Coder Agent - Executing Plan\")\n",
+    "for step in plan[\"steps\"]:\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": CODER_AGENT_SYSTEM_PROMPT},\n",
+    "            {\"role\": \"user\", \"content\": \"\"\"\n",
+    "                You have 4 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path), make_dir(path).\n",
+    "                Please perform the following operation: {step}\n",
+    "             \"\"\"},\n",
+    "        ],\n",
+    "        tools=TOOLS,\n",
+    "    )\n",
+    "    print(response.choices[0].message.content)\n",
     "\n",
-    "# Review agent reviews the code\n",
-    "# Review agent prioritizes the comments\n"
+    "# Review agent reviews the code\n"
    ]
   }
  ],
