--- a/hello2.ipynb
+++ b/hello2.ipynb
@@ -18,14 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "SANDBOX_DIR = \"/Users/aidand/dev/babyagi/sandbox\"\n",
-    "if not os.path.exists(SANDBOX_DIR):\n",
-    "    os.makedirs(SANDBOX_DIR)\n",
+    "SANDBOX_DIR = \"/Users/aidand/dev/auto-llama/sandbox\"\n",
+    "\n",
     "\n",
     "def create_file(path, content):\n",
     "    with open(os.path.join(SANDBOX_DIR, path), \"w\") as f:\n",
@@ -44,7 +43,7 @@
     "    print(f\"Deleted file {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
     "def make_dir(path):\n",
-    "    os.makedirs(os.path.join(SANDBOX_DIR, path))\n",
+    "    os.makedirs(os.path.join(SANDBOX_DIR, path), exist_ok=True)\n",
     "    print(f\"Created directory {os.path.join(SANDBOX_DIR, path)}\")\n",
     "\n",
     "TOOLS = [\n",
@@ -107,29 +106,40 @@
     "            \"required\": [\"path\"],\n",
     "        },\n",
     "    },\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"make_dir\",\n",
-    "            \"description\": \"Create a directory with the given name\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"path\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The relative path to the directory to create\",\n",
-    "                    },\n",
-    "                },\n",
-    "                \"required\": [\"path\"],\n",
-    "            },\n",
-    "        },\n",
-    "    },\n",
-    "]"
+    "    # {\n",
+    "    #     \"type\": \"function\",\n",
+    "    #     \"function\": {\n",
+    "    #         \"name\": \"make_dir\",\n",
+    "    #         \"description\": \"Create a directory with the given name\",\n",
+    "    #         \"parameters\": {\n",
+    "    #             \"type\": \"object\",\n",
+    "    #             \"properties\": {\n",
+    "    #                 \"path\": {\n",
+    "    #                     \"type\": \"string\",\n",
+    "    #                     \"description\": \"The relative path to the directory to create\",\n",
+    "    #                 },\n",
+    "    #             },\n",
+    "    #             \"required\": [\"path\"],\n",
+    "    #         },\n",
+    "    #     },\n",
+    "    # },\n",
+    "]\n",
+    "\n",
+    "def run_tool(tool_call):\n",
+    "    arguments = json.loads(tool_call.function.arguments)\n",
+    "    if tool_call.function.name == \"create_file\":\n",
+    "        create_file(arguments[\"path\"], arguments[\"content\"])\n",
+    "    elif tool_call.function.name == \"update_file\":\n",
+    "        update_file(arguments[\"path\"], arguments[\"content\"])\n",
+    "    elif tool_call.function.name == \"delete_file\":\n",
+    "        delete_file(arguments[\"path\"])\n",
+    "    elif tool_call.function.name == \"make_dir\":\n",
+    "        make_dir(arguments[\"path\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -137,20 +147,57 @@
      "output_type": "stream",
      "text": [
       "Coder Agent - Plan\n",
-      "Create a directory for the codebase.\n",
-      "Create a README.md file in the root of the codebase that describes the project and how to run it.\n",
-      "Create a requirements.txt file in the root of the codebase that lists the necessary dependencies for the project.\n",
-      "Create the main Python module file that contains the core functionality of the codebase.\n",
-      "If there are any additional modules or scripts, create those files accordingly.\n",
-      "Test the code to ensure it works as intended.\n",
+      "Create a directory named 'pdf_to_text_converter' for the codebase.\n",
+      "Inside the 'pdf_to_text_converter' directory, create a Python script named 'converter.py' that will contain the logic to download a PDF and convert it to a text file.\n",
+      "Create a README.md file in the root of the 'pdf_to_text_converter' directory to describe the codebase and provide instructions on how to run it.\n",
+      "Create a requirements.txt file in the root of the 'pdf_to_text_converter' directory to list the dependencies needed (e.g., requests, PyPDF2).\n",
+      "In 'converter.py', import required libraries, set up a function to download the PDF from a given URL, save it locally, and implement the logic to convert the PDF into text.\n",
+      "Test the functionality of 'converter.py' to ensure it works as expected, handling any issues like file not found or URL errors gracefully.\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Coder Agent - Executing Plan\n",
-      "ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_cN3nv4Sm7doybM1bIkEtr0a5', function=Function(arguments='{\"path\":\"codebase/README.md\",\"content\":\"# Codebase\\\\n\\\\nThis is a codebase for a small Python project.\"}', name='create_file'), type='function')])\n",
-      "ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_tLvnVwJ7rna3x6KQf4FnbErw', function=Function(arguments='{\"path\":\"README.md\",\"content\":\"# Project Title\\\\n\\\\nThis project is aimed at building a small Python codebase that will {PROGRAM_OBJECTIVE}.\\\\n\\\\n## Getting Started\\\\n\\\\n### Prerequisites\\\\n- Python 3.x\\\\n\\\\n### Installation\\\\n1. Clone this repository: \\\\n   ```\\\\n   git clone https://github.com/yourusername/projectname.git\\\\n   ```\\\\n2. Navigate into the project directory:\\\\n   ```\\\\n   cd projectname\\\\n   ```\\\\n3. Install the required packages:\\\\n   ```\\\\n   pip install -r requirements.txt\\\\n   ```\\\\n\\\\n### Running the Project\\\\nTo run the project, use the following command:\\\\n```bash\\\\npython main.py\\\\n```\\\\n\\\\n### Contributing\\\\nContributions are welcome! Please read the CONTRIBUTING.md for details on the process for submitting pull requests.\\\\n\\\\n### License\\\\nThis project is licensed under the MIT License - see the LICENSE.md file for details.\\\\n\"}', name='create_file'), type='function')])\n",
-      "ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_hxY9MMI73VAE5QNj3tj6TxsM', function=Function(arguments='{\"path\":\"requirements.txt\",\"content\":\"# Required dependencies for the project\\\\n\\\\n# Example dependencies\\\\nnumpy\\\\npandas\\\\nrequests\"}', name='create_file'), type='function')])\n",
-      "ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_L00m866obTO9JASjTYRU3UXY', function=Function(arguments='{\"path\":\"main.py\",\"content\":\"def main():\\\\n    print(\\\\\"Hello, World!\\\\\")\\\\n\\\\nif __name__ == \\'__main__\\':\\\\n    main()\"}', name='create_file'), type='function')])\n",
-      "ChatCompletionMessage(content='To proceed with the request, I need to know the specific modules or scripts you would like to create. Could you please provide the names and contents for each of the files you want to create?', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n",
-      "ChatCompletionMessage(content=\"It seems like you want to test some code that involves file operations like creating, updating, deleting files, and possibly making a directory. However, I don't have the actual code you'd like to test. \\n\\nCould you please provide the code that you would like to test or specify which operation you want to perform?\", refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
+      "Created directory /Users/aidand/dev/auto-llama/sandbox/pdf_to_text_converter\n",
+      "Created directory /Users/aidand/dev/auto-llama/sandbox/pdf_to_text_converter\n",
+      "Created directory /Users/aidand/dev/auto-llama/sandbox/pdf_to_text_converter\n",
+      "Created directory /Users/aidand/dev/auto-llama/sandbox/pdf_to_text_converter\n",
+      "Created file /Users/aidand/dev/auto-llama/sandbox/converter.py\n",
+      "Created file /Users/aidand/dev/auto-llama/sandbox/converter.py\n",
+      "filename: converter.py ---\n",
+      "import requests\n",
+      "from PyPDF2 import PdfReader\n",
+      "\n",
+      "\n",
+      "def download_pdf(url, save_path):\n",
+      "    try:\n",
+      "        response = requests.get(url)\n",
+      "        response.raise_for_status()  # Check for HTTP errors\n",
+      "        with open(save_path, 'wb') as f:\n",
+      "            f.write(response.content)\n",
+      "    except requests.exceptions.RequestException as e:\n",
+      "        print(f'Error downloading PDF: {e}')\n",
+      "\n",
+      "\n",
+      "def pdf_to_text(pdf_path, text_path):\n",
+      "    try:\n",
+      "        reader = PdfReader(pdf_path)\n",
+      "        with open(text_path, 'w') as f:\n",
+      "            for page in reader.pages:\n",
+      "                f.write(page.extract_text() + '\\n')\n",
+      "    except FileNotFoundError:\n",
+      "        print(f'Error: The file {pdf_path} was not found.')\n",
+      "    except Exception as e:\n",
+      "        print(f'Error converting PDF to text: {e}')\n",
+      "\n",
+      "\n",
+      "# Sample usage\n",
+      "if __name__ == '__main__':\n",
+      "    pdf_url = 'http://example.com/sample.pdf'\n",
+      "    pdf_path = 'downloaded.pdf'\n",
+      "    text_path = 'output.txt'\n",
+      "\n",
+      "    download_pdf(pdf_url, pdf_path)\n",
+      "    pdf_to_text(pdf_path, text_path)EOF\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -161,7 +208,7 @@
     "\n",
     "PROGRAM_OBJECTIVE=\"download a PDF from the internet and convert it to a text file.\"\n",
     "\n",
-    "CODER_AGENT_SYSTEM_PROMPT=\"\"\"\n",
+    "CODER_AGENT_SYSTEM_PROMPT=f\"\"\"\n",
     "You are a software engineer who is writing code to build a small python codebase that will {PROGRAM_OBJECTIVE}.\n",
     "\"\"\"\n",
     "\n",
@@ -172,12 +219,24 @@
     "\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)\n",
     "\n",
+    "if os.path.exists(SANDBOX_DIR):\n",
+    "    # Clear the contents of the directory\n",
+    "    for item in os.listdir(SANDBOX_DIR):\n",
+    "        item_path = os.path.join(SANDBOX_DIR, item)\n",
+    "        if os.path.isfile(item_path):\n",
+    "            os.unlink(item_path)\n",
+    "        elif os.path.isdir(item_path):\n",
+    "            import shutil\n",
+    "            shutil.rmtree(item_path)\n",
+    "else:\n",
+    "    os.makedirs(SANDBOX_DIR)\n",
+    "\n",
     "# Coding agent creates a step by step plan\n",
     "response = client.chat.completions.create(\n",
     "    model=\"gpt-4o-mini\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": CODER_AGENT_SYSTEM_PROMPT},\n",
-    "        {\"role\": \"user\", \"content\": \"\"\"\n",
+    "        {\"role\": \"user\", \"content\": f\"\"\"\n",
     "         Create a step by step plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\n",
     "         You have 4 different operations you can perform. create_file(path, content), update_file(path, content), delete_file(path), make_dir(path).\n",
     "         Limit your step by step plan to only these operations.\n",
@@ -190,7 +249,7 @@
     "        \"type\": \"json_schema\",\n",
     "        \"json_schema\": {\n",
     "            \"name\": \"Plan\",\n",
-    "            \"description\": \"A plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\",\n",
+    "            \"description\": f\"A plan to complete the task of creating a codebase that will {PROGRAM_OBJECTIVE}.\",\n",
     "            \"strict\": True,\n",
     "            \"schema\": {\n",
     "                \"type\": \"object\",\n",
@@ -242,9 +301,33 @@
     "        ],\n",
     "        tools=TOOLS,\n",
     "    )\n",
-    "    print(response.choices[0].message)\n",
+    "    message = response.choices[0].message\n",
+    "    if message.content:\n",
+    "        print(\"Not enough information to run tool: \", message.content)\n",
+    "    else:\n",
+    "        tool_call = message.tool_calls[0]\n",
+    "        run_tool(tool_call)\n",
     "\n",
-    "# Review agent reviews the code\n"
+    "# Gets a concatenated string of all the files in the codebase and their contents\n",
+    "def get_codebase_contents():\n",
+    "    contents = \"\"\n",
+    "    for root, dirs, files in os.walk(SANDBOX_DIR):\n",
+    "        for file in files:\n",
+    "            # concatenate the file name\n",
+    "            contents += f\"filename: {file} ---\\n\"\n",
+    "            with open(os.path.join(root, file), \"r\") as f:\n",
+    "                contents += f.read()\n",
+    "            contents += \"EOF\\n\\n\"\n",
+    "    return contents\n",
+    "print(get_codebase_contents())\n",
+    "\n",
+    "# Review agent reviews the code\n",
+    "# REVIEWER_AGENT_SYSTEM_PROMPT=f\"\"\"\n",
+    "# You are a software engineer who is reviewing the codebase that was created by another software engineer.\n",
+    "# The program is meant to {PROGRAM_OBJECTIVE}.\n",
+    "# Please review the codebase and make sure it is correct.\n",
+    "# Please provide a list of changes you would like to make to the codebase.\n",
+    "# \"\"\""
    ]
   }
  ],
